<resources>
    <string name="app_name">Szyfry0</string>
    <string name="btnCMorse_name">Koduj morse\'a</string>
    <string name="btnDMorse_name">Dekoduj morse\'a</string>
    <string name="btnPlayfair_name">Szyfr Playfaira</string>
    <string name="cmorse_hint">Tekst do zakodowania</string>
    <string name="save">Zapisz</string>
    <string name="name_key">Nazwa klucza</string>
    <string name="key">Klucz</string>
    <string name="encrypt_str">Szyfruj</string>
    <string name="decrypt_str">Deszyfruj</string>
    <string name="data_process_hint">Dane do przetworzenia</string>
    <string name="copy">Kopiuj</string>
    <string name="paste">Wklej</string>
    <string name="copy_toast">Skopiowano do schowka</string>
    <string name="settings_str">Ustawienia</string>

    <string name="middle_dot_str">•</string>
    <string name="line_str">-</string>
    <string name="slash_str">/</string>
    <string name="back_str"><![CDATA[<-]]></string>
    <string name="none_str" />
    <string name="triangle_str">▽</string>
    <string name="hamburger_str">≡</string>
    <string name="new_key">NOWY KLUCZ</string>

    <string name="test0">test 0</string>
    <string name="test1">test 1</string>
    <string name="test2">test 2</string>
    <string name="test3">test 3</string>
    <string name="inne_szyfry_str">Inne szyfry</string>
</resources>