<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnCMorse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:insetLeft="12dp"
        android:insetTop="12dp"
        android:insetRight="12dp"
        android:text="@string/btnCMorse_name" />

    <Button
        android:id="@+id/btnDMorse"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:insetLeft="12dp"
        android:insetRight="12dp"
        android:text="@string/btnDMorse_name" />

    <Button
        android:id="@+id/btnPlayfair"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:insetLeft="12dp"
        android:insetRight="12dp"
        android:insetBottom="12dp"
        android:text="@string/btnPlayfair_name" />
</LinearLayout>